--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
   "name": "young_app_test",
   "version": "1.0.0",
-  "description": "Test application from code&care(Nik)",
+  "description": "Test application from code&care",
   "main": "api.js",
   "author": "Nikita G. <nikita.g@code-care.pro>",
   "license": "MIT",
   "scripts": {
-    "test": "mocha tests/**/*.test.js",
+    "test": "mocha -r ts-node/register -R spec --ui bdd tests/**/*test.ts",
     "start": "tsc src/api.ts && node src/api.js"
   },
   "dependencies": {
-    "@types/mocha": "^8.0.4",
     "axios": "^0.21.0",
     "dotenv": "^8.2.0",
     "mocha": "^8.2.1",
-    "sinon": "^9.2.1",
-    "ts-node": "^9.1.0"
+    "@types/node": "^14.14.10"
   },
   "devDependencies": {
-    "@types/node": "^14.14.10",
+    "sinon": "^9.2.1",
+    "ts-node": "^9.1.0",
+    "@types/mocha": "^8.0.4",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
     "@typescript-eslint/parser": "^4.9.0",
     "eslint": "^7.14.0",
